<resources>
    <string name="app_name">GoFitHub</string>
    <string name="tagline">Your fitness journey starts here</string>
    <string name="button_continue_as_guest">Continue as Guest</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>


    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_email_address">Enter email address</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_username">Enter username</string>
    <string name="forgot_password_prompt"><u>Forgot password?</u></string>
    <string name="register_page_title">Welcome! Are you a ....</string>
    <string name="Trainer">Trainer</string>
    <string name="GeneralUser">General User</string>
    <string name="select_goal_prompt">Select your goal</string>
    <string name="select_speciality_prompt">Select your specialty</string>
    <string name="select_experience_prompt">Select your experience level</string>

    <!-- Goal types for User Registration -->
    <string-array name="goal_types">
        <item>Lose Weight</item>
        <item>Gain Weight</item>
        <item>Improve Endurance</item>
        <item>Increase Focus</item>
    </string-array>

    <!-- Experience levels for Trainer Registration -->
    <string-array name="experience_levels">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Experienced</item>
    </string-array>

    <!-- Specialties for Trainer Registration -->
    <string-array name="specialties">
        <item>Running</item>
        <item>Walking</item>
        <item>Cycling</item>
        <item>Yoga</item>
        <item>HIIT</item>
        <item>Weightlifting</item>
    </string-array>

    <string name="hourly_rate_prompt">Hourly rate(USD) for Personal Training</string>
    <string name="bio_for_trainer_hint">Enter your Brief training history.</string>
    <string name="upload_certificate">Upload Certificate</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>

</resources>